force-app/main/default/objects/ExpRavv__c/ExpRavv__c.object-meta.xml
<CustomObject>
    <label>Export Ravvedimento</label>
    <nameField>
        <displayFormat>ER - {000000}</displayFormat>
        <label>Nome Export Ravvedimento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Ravvedimenti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>