force-app/main/default/objects/ExpRavv__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Export Ravvedimenti</relationshipLabel>
    <relationshipName>Export_Ravvedimenti</relationshipName>
    <type>Lookup</type>
</CustomField>