force-app/main/default/objects/ExpRavv__c/fields/OperandName__c.field-meta.xml
<CustomField>
    <fullName>OperandName__c</fullName>
    <label>Operando</label>
    <length>255</length>
    <type>Text</type>
</CustomField>