force-app/main/default/objects/ExpRavv__c/fields/OperandValue__c.field-meta.xml
<CustomField>
    <fullName>OperandValue__c</fullName>
    <label>Valore operando</label>
    <length>255</length>
    <type>Text</type>
</CustomField>