force-app/main/default/objects/ExpRavv__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordine</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Export Ravvedimenti</relationshipLabel>
    <relationshipName>Export_Ravvedimenti</relationshipName>
    <type>Lookup</type>
</CustomField>