force-app/main/default/objects/ExpRavv__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <formula>IF(Order__r.ProcessCode__c=&quot;A01&quot;, &quot;Ambiente&quot;, 
IF(Order__r.ProcessCode__c=&quot;VT1&quot;, &quot;Subentro&quot;,
&quot;Variazione&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sottotipo</label>
    <type>Text</type>
</CustomField>