force-app/main/default/objects/ExpRavv__c/fields/SuspensionEndDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionEndDate__c</fullName>
    <label>Fine periodo sospensione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>