force-app/main/default/objects/ExpRavv__c/fields/SuspensionStartDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionStartDate__c</fullName>
    <label>Inizio periodo sospensione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>